src/parser/snapshots/ruasc__parser__tests__all_samples@operators.as.snap
---
source: src/parser/tests.rs
expression: parsed
input_file: samples/operators.as
---
Ok:
  statements:
    - Declare:
        name: a
        value:
          Constant:
            Integer: 10
    - Declare:
        name: b
        value:
          Constant:
            Integer: 3
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a + b = "
                - Parenthesis:
                    BinaryOperator:
                      - Add
                      - Constant:
                          Identifier: a
                      - Constant:
                          Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a - b = "
                - Parenthesis:
                    BinaryOperator:
                      - Sub
                      - Constant:
                          Identifier: a
                      - Constant:
                          Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a * b = "
                - Parenthesis:
                    BinaryOperator:
                      - Multiply
                      - Constant:
                          Identifier: a
                      - Constant:
                          Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a / b = "
                - Parenthesis:
                    BinaryOperator:
                      - Divide
                      - Constant:
                          Identifier: a
                      - Constant:
                          Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a % b = "
                - Parenthesis:
                    BinaryOperator:
                      - Modulo
                      - Constant:
                          Identifier: a
                      - Constant:
                          Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "++a = "
                - Parenthesis:
                    UnaryOperator:
                      - Increment: Prefix
                      - Constant:
                          Identifier: a
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "--a = "
                - Parenthesis:
                    UnaryOperator:
                      - Decrement: Prefix
                      - Constant:
                          Identifier: a
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a++ = "
                - Parenthesis:
                    UnaryOperator:
                      - Increment: Postfix
                      - Constant:
                          Identifier: a
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a-- = "
                - Parenthesis:
                    UnaryOperator:
                      - Decrement: Postfix
                      - Constant:
                          Identifier: a
    - Declare:
        name: hello
        value:
          Constant:
            String: Hello
    - Declare:
        name: world
        value:
          Constant:
            String: World
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "hello + \" \" + world = "
                - Parenthesis:
                    BinaryOperator:
                      - Add
                      - Constant:
                          Identifier: hello
                      - BinaryOperator:
                          - Add
                          - Constant:
                              String: " "
                          - Constant:
                              Identifier: world
    - Declare:
        name: x
        value:
          Constant:
            Integer: 5
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "x = "
                - Constant:
                    Identifier: x
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "x += 2 => "
                - Parenthesis:
                    BinaryOperator:
                      - AddAssign
                      - Constant:
                          Identifier: x
                      - Constant:
                          Integer: 2
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "x -= 2 => "
                - Parenthesis:
                    BinaryOperator:
                      - SubAssign
                      - Constant:
                          Identifier: x
                      - Constant:
                          Integer: 2
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "x *= 3 => "
                - Parenthesis:
                    BinaryOperator:
                      - MultiplyAssign
                      - Constant:
                          Identifier: x
                      - Constant:
                          Integer: 3
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "x /= 5 => "
                - Parenthesis:
                    BinaryOperator:
                      - DivideAssign
                      - Constant:
                          Identifier: x
                      - Constant:
                          Integer: 5
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "x %= 2 => "
                - Parenthesis:
                    BinaryOperator:
                      - ModuloAssign
                      - Constant:
                          Identifier: x
                      - Constant:
                          Integer: 2
