src/parser/snapshots/ruasc__parser__tests__all_samples@trace_hello_world.as.snap
---
source: src/parser/tests.rs
expression: parsed
input_file: samples/trace_hello_world.as
---
Ok:
  expressions:
    - EVal:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: Hello World
