src/parser/snapshots/ruasc__parser__tests__all_samples@typeof.as.snap
---
source: src/parser/tests.rs
expression: parsed
input_file: samples/typeof.as
---
Ok:
  statements:
    - Declare:
        - name: num
          value:
            Constant:
              Integer: 1
    - Declare:
        - name: obj
          value:
            InitObject:
              - - num
                - Constant:
                    Integer: 1
              - - trace
                - Constant:
                    Identifier: trace
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "typeof num: "
                - Parenthesis:
                    TypeOf:
                      - Constant:
                          Identifier: num
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "typeof obj: "
                - Parenthesis:
                    TypeOf:
                      - Constant:
                          Identifier: obj
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "typeof obj.num: "
                - Parenthesis:
                    TypeOf:
                      - Field:
                          - Constant:
                              Identifier: obj
                          - Constant:
                              String: num
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "typeof obj.num + 1: "
                - Parenthesis:
                    BinaryOperator:
                      - Add
                      - TypeOf:
                          - Field:
                              - Constant:
                                  Identifier: obj
                              - Constant:
                                  String: num
                      - Constant:
                          Integer: 1
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "typeof obj.num == \\\"number\\\" ? \\\":)\\\" : \\\":(\\\": "
                - Parenthesis:
                    Ternary:
                      condition:
                        BinaryOperator:
                          - Equal
                          - TypeOf:
                              - Field:
                                  - Constant:
                                      Identifier: obj
                                  - Constant:
                                      String: num
                          - Constant:
                              String: number
                      "yes":
                        Constant:
                          String: ":)"
                      "no":
                        Constant:
                          String: ":("
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "typeof obj.num + typeof obj.num: "
                - Parenthesis:
                    BinaryOperator:
                      - Add
                      - TypeOf:
                          - Field:
                              - Constant:
                                  Identifier: obj
                              - Constant:
                                  String: num
                      - TypeOf:
                          - Field:
                              - Constant:
                                  Identifier: obj
                              - Constant:
                                  String: num
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "typeof obj.trace: "
                - Parenthesis:
                    TypeOf:
                      - Field:
                          - Constant:
                              Identifier: obj
                          - Constant:
                              String: trace
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "typeof obj.trace(): "
                - Parenthesis:
                    TypeOf:
                      - Call:
                          name:
                            Field:
                              - Constant:
                                  Identifier: obj
                              - Constant:
                                  String: trace
                          args: []
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "typeof(nonexistent, obj): "
                - Parenthesis:
                    TypeOf:
                      - Constant:
                          Identifier: nonexistent
                      - Constant:
                          Identifier: obj
