src/parser/snapshots/ruasc__parser__tests__trace.snap
---
source: src/parser/tests.rs
expression: "parse_document(&tokens).map_err(|e| format!(\"{e:#?}\"))"
---
Ok:
  expressions:
    - EVal:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: Hello World
