src/parser/snapshots/ruasc__parser__tests__var_assignments.snap
---
source: src/parser/tests.rs
expression: "parse_document(&tokens).map_err(|e| format!(\"{e:#?}\"))"
---
Ok:
  expressions:
    - Declare:
        name: message
        value:
          BinaryOperator:
            - Add
            - Constant:
                String: Hello
            - Constant:
                String: " "
    - EVal:
        BinaryOperator:
          - AddAssign
          - Constant:
              Identifier: message
          - Constant:
              String: World
    - EVal:
        BinaryOperator:
          - Assign
          - Constant:
              Identifier: message
          - BinaryOperator:
              - Add
              - Constant:
                  Identifier: message
              - Constant:
                  String: "!"
    - EVal:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                Identifier: message
